# django_crypto

./: README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
crypto_app/: urls.py  views.py
crypto_app/migrations/: 0001_initial.py  0002_test_code.py
crypto_app/templates/: base.html  index.html
