[tool.poetry]
name = "django-crypto"
version = "0.1.0"
description = ""
authors = ["Sambiase <marsamb@gmail.com>"]
readme = "README.md"
packages = [{include = "django_crypto"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djlint = "^1.19.13"
python-decouple = "^3.7"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
